--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,33 @@
 </head>
 
 <body>
-
-
-<!-- Custom HTML -->
+<!-- ======= HEADER START ======= -->
+<header class="main-head">
+	<div class="container">
+		<div class="top-line">
+			<div class="left">
+				<a href="/" class="logo"><img src="img/logo.png" alt="PROTRADE" class="img-responsive"></a>
+				<div class="description">Оптовая продажа електронных компонентов</div>
+			</div>
+			<div class="middle">
+				<nav class="main-mnu">
+					<ul>
+						<li><a href="#0">О компании</a></li>
+						<li><a href="#0">Каталог</a></li>
+						<li><a href="#0">Услуги</a></li>
+						<li><a href="#0">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="right">
+				<a href="tel:78002220703" class="call">+7 (800) 222-07-03</a>
+				<a href="#0">Заказать</a>
+				<a href="mailto:info@protrade.company" class="mail">info@protrade.company</a>
+			</div>
+		</div>
+	</div>
+</header>
+<!-- ======= HEADER END ======= -->
 
 <script src="js/scripts.min.js"></script>
 
