section intro complete

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,18 @@
 </header>
 <!-- ======= HEADER END ======= -->
 
+<!-- ======= SECTION INTRO START ======= -->
+<section class="s-intro">
+	<div class="container">
+		<div class="intro-container">
+			<h1>Электронные компоненты</h1>
+			<h2>Распродажа складских остатков</h2>
+			<a href="#0" class="btn btn-red">Подробнее</a>
+		</div>
+	</div>
+</section>
+<!-- ======= SECTION INTRO END ======= -->
+
 <script src="js/scripts.min.js"></script>
 
 </body>
