section servlist complete

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,59 @@
 </section>
 <!-- ======= SECTION INTRO END ======= -->
 
+<!-- ======= SECTION SERVLIST START ======= -->
+<section class="s-servlist">
+	<div class="container">
+		<div class="row">
+			<!-- servlist-item -->
+			<div class="col-md-6">
+				<div class="servlist-item">
+					<div class="servlist-item-title" style="background-image: url('img/servlist-img-1.jpg');">
+						Осуществляем поставки электронных компонентов
+					</div>
+					<div class="servlist-item-content">
+						<nav class="servlists">
+							<ul>
+								<li><a href="#0">Диоды</a></li>
+								<li><a href="#0">Разъемы</a></li>
+								<li><a href="#0">Микросхемы</a></li>
+								<li><a href="#0">Транзисторы</a></li>
+							</ul>
+						</nav>
+						<div class="btn-wrap">
+							<a href="#0" class="more">Перейти в каталог</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /servlist-item -->
+
+			<!-- servlist-item -->
+			<div class="col-md-6">
+				<div class="servlist-item">
+					<div class="servlist-item-title" style="background-image: url('img/servlist-img-2.jpg');">
+						Оказываем логистические услуги
+					</div>
+					<div class="servlist-item-content">
+						<nav class="servlists">
+							<ul>
+								<li><a href="#0">Международная логистика</a></li>
+								<li><a href="#0">Таможенное оформление</a></li>
+								<li><a href="#0">Услуга ВЭД-агент</a></li>
+							</ul>
+						</nav>
+						<div class="btn-wrap">
+							<a href="#0" class="more">Перейти в каталог</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /servlist-item -->
+		</div>
+	</div>
+</section>
+<!-- ======= SECTION SERVLIST END ======= -->
+
 <script src="js/scripts.min.js"></script>
 
 </body>
