--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,22 @@
 </section>
 <!-- ======= SECTION SERVLIST END ======= -->
 
+<!-- ======= SECTION ABOUT START ======= -->
+<section class="s-about">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6">
+				<h2 class="section-title">О компании</h2>
+				<div class="about-content">
+					<p>Прежде всего, начало повседневной работы по формированию позиции позволяет выполнить важные задания по разработке форм воздействия. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: курс на социально-ориентированный национальный проект, в своем классическом представлении, допускает внедрение существующих финансовых и административных условий. Не следует, однако, забывать, что сложившаяся структура организации играет важную роль .</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="about-img" style="background-image: url('img/about-img.jpg');"></div>
+</section>
+<!-- ======= SECTION ABOUT END ======= -->
+
 <script src="js/scripts.min.js"></script>
 
 </body>
