section how complete

--- a/app/index.html
+++ b/app/index.html
@@ -136,6 +136,89 @@
 </section>
 <!-- ======= SECTION ABOUT END ======= -->
 
+<!-- ======= SECTION WHY START ======= -->
+<section class="s-why">
+	<div class="container">
+		<h2 class="section-title">Почему выбирают нас</h2>
+		<div class="why-wrap">
+			<div class="row">
+				<!-- why-item -->
+				<div class="col-md-4">
+					<div class="why-item">
+						<img src="img/icons/why-icon-1.png" alt="alt" class="img-responsive">
+						<span>Широкая база поставщиков</span>
+					</div>
+				</div>
+				<!-- /why-item -->
+
+				<!-- why-item -->
+				<div class="col-md-4">
+					<div class="why-item">
+						<img src="img/icons/why-icon-2.png" alt="alt" class="img-responsive">
+						<span>Удобные условия работы</span>
+					</div>
+				</div>
+				<!-- /why-item -->
+
+				<!-- why-item -->
+				<div class="col-md-4">
+					<div class="why-item">
+						<img src="img/icons/why-icon-3.png" alt="alt" class="img-responsive">
+						<span>Спектр дополнительных услуг</span>
+					</div>
+				</div>
+				<!-- /why-item -->
+			</div>
+		</div>
+	</div>
+</section>
+<!-- ======= SECTION WHY END ======= -->
+
+<!-- ======= SECTION HOW START ======= -->
+<section class="s-how">
+	<h2 class="section-title">Как мы работаем</h2>
+	<div class="how-wrap">
+		<div class="container">
+			<!-- how-item -->
+			<div class="how-item">
+				<div class="how-item-square"></div>
+				<div class="how-item-desc">Принимаем заказ</div>
+			</div>
+			<!-- /how-item -->
+
+			<!-- how-item -->
+			<div class="how-item">
+				<div class="how-item-square"></div>
+				<div class="how-item-desc">Подтверждаем наличие</div>
+			</div>
+			<!-- /how-item -->
+
+			<!-- how-item -->
+			<div class="how-item">
+				<div class="how-item-square"></div>
+				<div class="how-item-desc">Обговариваем условия поставки</div>
+			</div>
+			<!-- /how-item -->
+
+			<!-- how-item -->
+			<div class="how-item">
+				<div class="how-item-square"></div>
+				<div class="how-item-desc">Подписываем договор</div>
+			</div>
+			<!-- /how-item -->
+
+			<!-- how-item -->
+			<div class="how-item">
+				<div class="how-item-square"></div>
+				<div class="how-item-desc">Осуществляем поставку</div>
+			</div>
+			<!-- /how-item -->
+		</div>
+	</div>
+</section>
+<!-- ======= SECTION HOW END ======= -->
+
+
 <script src="js/scripts.min.js"></script>
 
 </body>
