section brands complete

--- a/app/index.html
+++ b/app/index.html
@@ -218,6 +218,52 @@
 </section>
 <!-- ======= SECTION HOW END ======= -->
 
+<!-- ======= SECTION BRANDS START ======= -->
+<section class="s-brands">
+	<div class="container">
+		<h2 class="section-title">Наши бренды</h2>
+		<div class="brands-slider owl-carousel">
+			<!-- slide start -->
+			<div class="brand-slide">
+				<img src="img/brand-img.png" alt="alt" class="img-responsive">
+			</div>
+			<!-- slide end -->
+
+			<!-- slide start -->
+			<div class="brand-slide">
+				<img src="img/brand-img.png" alt="alt" class="img-responsive">
+			</div>
+			<!-- slide end -->
+
+			<!-- slide start -->
+			<div class="brand-slide">
+				<img src="img/brand-img.png" alt="alt" class="img-responsive">
+			</div>
+			<!-- slide end -->
+
+			<!-- slide start -->
+			<div class="brand-slide">
+				<img src="img/brand-img.png" alt="alt" class="img-responsive">
+			</div>
+			<!-- slide end -->
+
+			<!-- slide start -->
+			<div class="brand-slide">
+				<img src="img/brand-img.png" alt="alt" class="img-responsive">
+			</div>
+			<!-- slide end -->
+
+			<!-- slide start -->
+			<div class="brand-slide">
+				<img src="img/brand-img.png" alt="alt" class="img-responsive">
+			</div>
+			<!-- slide end -->
+		</div>
+	</div>
+</section>
+<!-- ======= SECTION BRANDS END ======= -->
+
+
 
 <script src="js/scripts.min.js"></script>
 
