section consult complete

--- a/app/index.html
+++ b/app/index.html
@@ -263,6 +263,16 @@
 </section>
 <!-- ======= SECTION BRANDS END ======= -->
 
+<!-- ======= SECTION CONSULT START ======= -->
+<section class="s-consult" style="background-image: url('img/bg-consult.jpg');">
+	<div class="container">
+		<h2 class="section-title">Получи консультацию</h2>
+		<p>мы свяжемся с Вами в течение 10 минут</p>
+		<a href="#0" class="btn btn-red">Оставить заявку</a>
+	</div>
+</section>
+<!-- ======= SECTION CONSULT END ======= -->
+
 
 
 <script src="js/scripts.min.js"></script>
