--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 	<div class="container">
 		<div class="top-line">
 			<div class="left">
-				<a href="/" class="logo"><img src="img/logo.png" alt="PROTRADE" class="img-responsive"></a>
+				<a href="/" class="logo"><img src="img/novylogo.png" alt="PROTRADE" class="img-responsive"></a>
 				<div class="description">Оптовая продажа електронных компонентов</div>
 			</div>
 			<div class="middle">
@@ -273,8 +273,70 @@
 </section>
 <!-- ======= SECTION CONSULT END ======= -->
 
+<!-- ======= FOOTER START ======= -->
+<footer class="main-foot">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 order-2 order-lg-1">
+				<div class="foot-line">
+					<a href="#0" class="logo"><img src="img/novylogo.png" alt="Protrade" class="img-responsive"></a>
+					<div class="description">Оптовая продажа электронных компонентов</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-6">
+						<h3>О компании</h3>
+						<h4>Каталог продукции</h4>
+						<ul>
+							<li><a href="#0">Диоды</a></li>
+							<li><a href="#0">Разъемы</a></li>
+							<li><a href="#0">Транзисторы</a></li>
+						</ul>
+
+						<h4>Услуги</h4>
+						<ul>
+							<li><a href="#0">Международная логистика</a></li>
+							<li><a href="#0">Таможенное оформление</a></li>
+							<li><a href="#0">Услуга ВЭД-агента</a></li>
+						</ul>
+					</div>
+
+					<div class="col-sm-6">
+						<h3>Товары по брендам</h3>
+						<h4>Бренд 1</h4>
+						<ul>
+							<li><a href="#0">Диоды</a></li>
+							<li><a href="#0">Микросхемы</a></li>
+						</ul>
+
+						<h4>Бренд 2</h4>
+						<ul>
+							<li><a href="#0">Транзисторы</a></li>
+							<li><a href="#0">Разъемы</a></li>
+						</ul>
+
+						<h4>Бренд 3</h4>
+						<ul>
+							<li><a href="#0">Транзисторы</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-6 order-1 order-lg-2">
+				<div class="foot-contacts">
+					<p>Москва, ул. Ленина, д. 23/5 оф. 144</p>
+					<p><a href="tel:+88002220703" class="phone">тел. 8 (800) 222-07-03</a></p>
+					<p><a href="mailto:info@protrade.ru">info@protrade.ru</a></p>
+					<div id="map" data-att="55.754949" data-long="37.622261" data-zoom="17"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+<!-- ======= FOOTER END ======= -->
 
 
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 <script src="js/scripts.min.js"></script>
 
 </body>
