page-catalog.html complete

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,21 @@
 </head>
 
 <body>
+<!-- preloader -->
+<div class="preloader">
+	<div id="cube-loader">
+		<div class="caption">
+			<div class="cube-loader">
+				<div class="cube loader-1"></div>
+				<div class="cube loader-2"></div>
+				<div class="cube loader-4"></div>
+				<div class="cube loader-3"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- /preloader -->
+
 <!-- ======= HEADER START ======= -->
 <header class="main-head">
 	<div class="container">
@@ -336,7 +351,7 @@
 <!-- ======= FOOTER END ======= -->
 
 
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 <script src="js/scripts.min.js"></script>
 
 </body>
