--- a/app/page-about.html
+++ b/app/page-about.html
@@ -291,7 +291,15 @@
                     <p>Москва, ул. Ленина, д. 23/5 оф. 144</p>
                     <p><a href="tel:+88002220703" class="phone">тел. 8 (800) 222-07-03</a></p>
                     <p><a href="mailto:info@protrade.ru">info@protrade.ru</a></p>
-                    <div id="map" data-att="55.754949" data-long="37.622261" data-zoom="17"></div>
+
+
+
+                    <section class="map-wrap" style="background-image: url('img/bg-map.jpg');">
+                        <div class="loader loader-default"></div>
+                        <div id="map" data-att="55.754949" data-long="37.622261" data-zoom="17"></div>
+                    </section>
+
+                    <!--                    <div id="map" data-att="55.754949" data-long="37.622261" data-zoom="17"></div>-->
                 </div>
             </div>
         </div>
@@ -300,7 +308,7 @@
 <!-- ======= FOOTER END ======= -->
 
 
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+<!--<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>-->
 <script src="js/scripts.min.js"></script>
 
 </body>
